--- a/html/apply-ticket.html
+++ b/html/apply-ticket.html
@@ -54,10 +54,10 @@
                 <li>
                     <div class="list-info__title">참여자 수</div>
                     <div class="list-info__info">
-                        <div class="counter">
-                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
-                            <span>0</span>
-                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                        <div class="counter" id="counter">
+                            <button class="minus" id="minusParticipant"><img src="../img/ico_minus.svg" alt=""></button>
+                            <span>1</span>
+                            <button class="plus" id="plusParticipant"><img src="../img/ico_plus.svg" alt=""></button>
                           </div>
                     </div>
                 </li>
@@ -67,53 +67,54 @@
                 </li>
             </ul>
             <div class="hr mt56 mb32"></div>
-            <div class="input-wrap__subtitle pb32">
-                <div class="label-title">참여자1</div>
-                <label for="agree" class="chk_box align vm">
-                    <input type="checkbox" id="agree"  />
-                    <span class="on"></span>
-                    <div class="label-phrase">구매자 정보와 동일</div>
-                </label>
+            <div class="participant">
+                <div class="input-wrap__subtitle pb32">
+                    <div class="label-title participant-title">참여자1</div>
+                    <label for="agree" class="chk_box align vm">
+                        <input type="checkbox" id="agree"  />
+                        <span class="on"></span>
+                        <div class="label-phrase">구매자 정보와 동일</div>
+                    </label>
+                </div>
+                <label class="label pb8" for="txt4"><span class="essential">*</span>이름</label>
+                <input class="input mb32" id="txt4" type="text" placeholder="이름을 입력해주세요.">
+                <label class="label pb8" for="txt5">휴대폰 번호</label>
+                <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요.">
+                <label class="label pb8" for="txt6"><span class="essential">*</span>티셔츠 사이즈</label>
+                <ul class="size-radio">
+                    <li><input type="radio" id="size1" name="size" checked> <label for="size1">S</label></li>
+                    <li><input type="radio" id="size2" name="size"> <label for="size2">M</label></li>
+                    <li><input type="radio" id="size3" name="size"> <label for="size3">L</label></li>
+                    <li><input type="radio" id="size4" name="size"> <label for="size4">XL</label></li>
+                    <li><input type="radio" id="size5" name="size"> <label for="size5">2XL</label></li>
+                    <li><input type="radio" id="size6" name="size"> <label for="size6">3XL</label></li>
+                    <li><input type="radio" id="size7" name="size"> <label for="size7">4XL</label></li>
+                </ul>
+                <ul class="list-info mt32">
+                    <li>
+                        <div class="list-info__title">동반 유아(7세 이하)</div>
+                        <div class="list-info__info">
+                            <div class="counter counter2">
+                                <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
+                                <span>0</span>
+                                <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                              </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="list-info__title">동반 아동(8~11세)</div>
+                        <div class="list-info__info ml4">
+                            <div class="counter counter2">
+                                <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
+                                <span>0</span>
+                                <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                              </div>
+                        </div>
+                    </li>
+                </ul>
+                <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
+                <div class="hr mt48 mb56"></div>
             </div>
-            <label class="label pb8" for="txt4"><span class="essential">*</span>이름</label>
-            <input class="input mb32" id="txt4" type="text" placeholder="이름을 입력해주세요.">
-            <label class="label pb8" for="txt5">휴대폰 번호</label>
-            <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요.">
-            <label class="label pb8" for="txt6"><span class="essential">*</span>티셔츠 사이즈</label>
-            <ul class="size-radio">
-                <li><input type="radio" id="size1" name="size" checked> <label for="size1">S</label></li>
-                <li><input type="radio" id="size2" name="size"> <label for="size2">M</label></li>
-                <li><input type="radio" id="size3" name="size"> <label for="size3">L</label></li>
-                <li><input type="radio" id="size4" name="size"> <label for="size4">XL</label></li>
-                <li><input type="radio" id="size5" name="size"> <label for="size5">2XL</label></li>
-                <li><input type="radio" id="size6" name="size"> <label for="size6">3XL</label></li>
-                <li><input type="radio" id="size7" name="size"> <label for="size7">4XL</label></li>
-            </ul>
-
-            <ul class="list-info mt32">
-                <li>
-                    <div class="list-info__title">동반 유아(7세 이하)</div>
-                    <div class="list-info__info">
-                        <div class="counter">
-                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
-                            <span>0</span>
-                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
-                          </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="list-info__title">동반 아동(8~11세)</div>
-                    <div class="list-info__info ml4">
-                        <div class="counter">
-                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
-                            <span>0</span>
-                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
-                          </div>
-                    </div>
-                </li>
-            </ul>
-            <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
-            <div class="hr mt48 mb56"></div>
             <div class="input-wrap__subtitle pb32"><div class="label-title">결제 수단</div></div>
             <ul class="payment-radio">
                 <li>
@@ -183,3 +184,4 @@
             }
         })
 </script>
+
