--- a/html/apply-ticket-present.html
+++ b/html/apply-ticket-present.html
@@ -54,10 +54,10 @@
                 <li>
                     <div class="list-info__title">참여자 수</div>
                     <div class="list-info__info">
-                        <div class="counter">
-                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
-                            <span>0</span>
-                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                        <div class="counter" id="counter">
+                            <button class="minus" id="minusParticipant"><img src="../img/ico_minus.svg" alt=""></button>
+                            <span>1</span>
+                            <button class="plus" id="plusParticipant"><img src="../img/ico_plus.svg" alt=""></button>
                           </div>
                     </div>
                 </li>
@@ -67,93 +67,92 @@
                 </li>
             </ul>
             <div class="hr mt56 mb32"></div>
-            <div class="input-wrap__subtitle pb32" style="display: block;">
-                <div class="label-title">참여자1</div>
-                <label for="agree" class="chk_box align vm mt33">
-                    <input type="checkbox" id="agree" checked>
-                    <span class="on"></span>
-                    <div class="label-phrase red">선물 받을 사람이 배송 받을 주소 및 선택 사항 직접 입력</div>
-                </label>
-                <p class="instructions pt4">(결제 완료 후 신청 정보를 입력할 수 있는 URL을 발급해 드립니다. 선물 받을 사람에게 URL을 전달해 직접 배송 정보 및 티셔츠 사이즈, 동반 아동 수를 입력할 수 있도록 해 주세요.)</p>
-            </div>
-            <label class="label pb8" for="txt4"><span class="essential">*</span>이름</label>
-            <input class="input mb32" id="txt4" type="text" placeholder="이름을 입력해주세요." disabled>
-            <label class="label pb8" for="txt5">휴대폰 번호</label>
-            <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요." disabled>
-            <label class="label pb8" for="txt6"><span class="essential">*</span>주소</label>
-            <div class="input-type2">
-                <input class="input mb8" id="txt6" type="tel" placeholder="주소를 입력해주세요." disabled>
-                <button type="button" disabled>검색</button>
-            </div>
-            <input class="input" type="tel" placeholder="상세주소를 입력해주세요." disabled>
-
-            <label class="label pb8 pt32"><span class="essential">*</span>티셔츠 사이즈</label>
-            <ul class="size-radio">
-                <li><input type="radio" id="size1" name="size" disabled> <label for="size1">S</label></li>
-                <li><input type="radio" id="size2" name="size" disabled> <label for="size2">M</label></li>
-                <li><input type="radio" id="size3" name="size" disabled> <label for="size3">L</label></li>
-                <li><input type="radio" id="size4" name="size" disabled> <label for="size4">XL</label></li>
-                <li><input type="radio" id="size5" name="size" disabled> <label for="size5">2XL</label></li>
-                <li><input type="radio" id="size6" name="size" disabled> <label for="size6">3XL</label></li>
-                <li><input type="radio" id="size7" name="size" disabled> <label for="size7">4XL</label></li>
-            </ul>
-
-            <ul class="list-info mt32">
-                <li>
-                    <div class="list-info__title">동반 유아(7세 이하)</div>
-                    <div class="list-info__info">
-                        <div class="counter" aria-disabled="true">
-                            <button class="minus" disabled><img src="../img/ico_minus.svg" alt=""></button>
-                            <span>0</span>
-                            <button class="plus" disabled><img src="../img/ico_plus.svg" alt=""></button>
-                          </div>
-                    </div>
-                </li>
-                <li>
-                    <div class="list-info__title">동반 아동(8~11세)</div>
-                    <div class="list-info__info ml4">
-                        <div class="counter" aria-disabled="true">
-                            <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
-                            <span>0</span>
-                            <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
-                          </div>
-                    </div>
-                </li>
-            </ul>
-            <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
-            <div class="hr mt48 mb56"></div>
-            <div class="input-wrap__subtitle pb32" style="display: block;">
-                <div class="label-title">참여자2</div>
-                <label for="agree" class="chk_box align vm mt33">
-                    <input type="checkbox" id="agree">
-                    <span class="on"></span>
-                    <div class="label-phrase red">선물 받을 사람이 배송 받을 주소 및 선택 사항 직접 입력</div>
-                </label>
-                <p class="instructions pt4">(결제 완료 후 신청 정보를 입력할 수 있는 URL을 발급해 드립니다. 선물 받을 사람에게 URL을 전달해 직접 배송 정보 및 티셔츠 사이즈, 동반 아동 수를 입력할 수 있도록 해 주세요.)</p>
-            </div>
-            <label class="label pb8" for="txt4"><span class="essential">*</span>이름</label>
-            <input class="input mb32" id="txt4" type="text" placeholder="이름을 입력해주세요.">
-            <label class="label pb8" for="txt5">휴대폰 번호</label>
-            <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요.">
-            <label class="label pb8" for="txt3"><span class="essential">*</span>주소</label>
-            <div class="input-type2">
-                <input class="input mb8" id="txt3" type="tel" placeholder="주소를 입력해주세요.">
-                <button type="button" disabled>검색</button>
-            </div>
-            <input class="input" type="tel" placeholder="상세주소를 입력해주세요.">
-
-            <label class="label pb8 pt32"><span class="essential">*</span>티셔츠 사이즈</label>
-            <ul class="size-radio">
-                <li><input type="radio" id="size1" name="size"> <label for="size1">S</label></li>
-                <li><input type="radio" id="size2" name="size"> <label for="size2">M</label></li>
-                <li><input type="radio" id="size3" name="size" checked> <label for="size3">L</label></li>
-                <li><input type="radio" id="size4" name="size"> <label for="size4">XL</label></li>
-                <li><input type="radio" id="size5" name="size"> <label for="size5">2XL</label></li>
-                <li><input type="radio" id="size6" name="size"> <label for="size6">3XL</label></li>
-                <li><input type="radio" id="size7" name="size"> <label for="size7">4XL</label></li>
-            </ul>
-
-            <ul class="list-info mt32">
+            <!-- <div class="participant">
+                <div class="input-wrap__subtitle pb32" style="display: block;">
+                    <div class="label-title">참여자1</div>
+                    <label for="agree" class="chk_box align vm mt33">
+                        <input type="checkbox" id="agree" checked>
+                        <span class="on"></span>
+                        <div class="label-phrase red">선물 받을 사람이 배송 받을 주소 및 선택 사항 직접 입력</div>
+                    </label>
+                    <p class="instructions pt4">(결제 완료 후 신청 정보를 입력할 수 있는 URL을 발급해 드립니다. 선물 받을 사람에게 URL을 전달해 직접 배송 정보 및 티셔츠 사이즈, 동반 아동 수를 입력할 수 있도록 해 주세요.)</p>
+                </div>
+                <label class="label pb8" for="txt4"><span class="essential">*</span>이름</label>
+                <input class="input mb32" id="txt4" type="text" placeholder="이름을 입력해주세요." disabled>
+                <label class="label pb8" for="txt5">휴대폰 번호</label>
+                <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요." disabled>
+                <label class="label pb8" for="txt6"><span class="essential">*</span>주소</label>
+                <div class="input-type2">
+                    <input class="input mb8" id="txt6" type="tel" placeholder="주소를 입력해주세요." disabled>
+                    <button type="button" disabled>검색</button>
+                </div>
+                <input class="input" type="tel" placeholder="상세주소를 입력해주세요." disabled>
+                <label class="label pb8 pt32"><span class="essential">*</span>티셔츠 사이즈</label>
+                <ul class="size-radio">
+                    <li><input type="radio" id="size1" name="size" disabled> <label for="size1">S</label></li>
+                    <li><input type="radio" id="size2" name="size" disabled> <label for="size2">M</label></li>
+                    <li><input type="radio" id="size3" name="size" disabled> <label for="size3">L</label></li>
+                    <li><input type="radio" id="size4" name="size" disabled> <label for="size4">XL</label></li>
+                    <li><input type="radio" id="size5" name="size" disabled> <label for="size5">2XL</label></li>
+                    <li><input type="radio" id="size6" name="size" disabled> <label for="size6">3XL</label></li>
+                    <li><input type="radio" id="size7" name="size" disabled> <label for="size7">4XL</label></li>
+                </ul>
+                <ul class="list-info mt32">
+                    <li>
+                        <div class="list-info__title">동반 유아(7세 이하)</div>
+                        <div class="list-info__info">
+                            <div class="counter" aria-disabled="true">
+                                <button class="minus" disabled><img src="../img/ico_minus.svg" alt=""></button>
+                                <span>0</span>
+                                <button class="plus" disabled><img src="../img/ico_plus.svg" alt=""></button>
+                              </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="list-info__title">동반 아동(8~11세)</div>
+                        <div class="list-info__info ml4">
+                            <div class="counter" aria-disabled="true">
+                                <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
+                                <span>0</span>
+                                <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
+                              </div>
+                        </div>
+                    </li>
+                </ul>
+                <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
+                <div class="hr mt48 mb56"></div>
+            </div> -->
+            <div class="participant">
+                <div class="input-wrap__subtitle pb32" style="display: block;">
+                    <div class="label-title participant-title">참여자1</div>
+                    <label for="agree" class="chk_box align vm mt33">
+                        <input type="checkbox" id="agree">
+                        <span class="on"></span>
+                        <div class="label-phrase red">선물 받을 사람이 배송 받을 주소 및 선택 사항 직접 입력</div>
+                    </label>
+                    <p class="instructions pt4">(결제 완료 후 신청 정보를 입력할 수 있는 URL을 발급해 드립니다. 선물 받을 사람에게 URL을 전달해 직접 배송 정보 및 티셔츠 사이즈, 동반 아동 수를 입력할 수 있도록 해 주세요.)</p>
+                </div>
+                <label class="label pb8" for="txt4"><span class="essential">*</span>이름</label>
+                <input class="input mb32" id="txt4" type="text" placeholder="이름을 입력해주세요.">
+                <label class="label pb8" for="txt5">휴대폰 번호</label>
+                <input class="input mb32" id="txt5" type="text" placeholder="이름을 입력해주세요.">
+                <label class="label pb8" for="txt3"><span class="essential">*</span>주소</label>
+                <div class="input-type2">
+                    <input class="input mb8" id="txt3" type="tel" placeholder="주소를 입력해주세요.">
+                    <button type="button" disabled>검색</button>
+                </div>
+                <input class="input" type="tel" placeholder="상세주소를 입력해주세요.">
+                <label class="label pb8 pt32"><span class="essential">*</span>티셔츠 사이즈</label>
+                <ul class="size-radio">
+                    <li><input type="radio" id="size1" name="size"> <label for="size1">S</label></li>
+                    <li><input type="radio" id="size2" name="size"> <label for="size2">M</label></li>
+                    <li><input type="radio" id="size3" name="size" checked> <label for="size3">L</label></li>
+                    <li><input type="radio" id="size4" name="size"> <label for="size4">XL</label></li>
+                    <li><input type="radio" id="size5" name="size"> <label for="size5">2XL</label></li>
+                    <li><input type="radio" id="size6" name="size"> <label for="size6">3XL</label></li>
+                    <li><input type="radio" id="size7" name="size"> <label for="size7">4XL</label></li>
+                </ul>
+                <ul class="list-info mt32">
                 <li>
                     <div class="list-info__title">동반 유아(7세 이하)</div>
                     <div class="list-info__info">
@@ -161,7 +160,7 @@
                             <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
                             <span>0</span>
                             <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
-                          </div>
+                        </div>
                     </div>
                 </li>
                 <li>
@@ -171,67 +170,68 @@
                             <button class="minus"><img src="../img/ico_minus.svg" alt=""></button>
                             <span>0</span>
                             <button class="plus"><img src="../img/ico_plus.svg" alt=""></button>
-                          </div>
+                        </div>
                     </div>
                 </li>
-            </ul>
-            <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
-            <div class="hr mt48 mb56"></div>
-            <div class="input-wrap__subtitle pb32"><div class="label-title">결제 수단</div></div>
-            <ul class="payment-radio">
-                <li>
-                    <input type="radio" id="payment1" name="payment" checked="">
-                    <label for="payment1">
-                        <span>신용카드</span>
-                    </label>
-                </li>
-                <li>
-                    <input type="radio" id="payment2" name="payment">
-                    <label for="payment2">
-                        <span>계좌이체</span>
-                    </label>
-                </li>
-                <li>
-                    <input type="radio" id="payment3" name="payment">
-                    <label for="payment3">
-                        <span>무통장 입금</span>
-                    </label>
-                </li>
-            </ul>    
-            <label class="label pb8 pt32"><span class="essential">*</span>환불 계좌</label>
-            <p class="pt8 text2">계좌이체, 무통장 입금 결제 후 환불 시 결제 금액을 입금 받으실 계좌번호 정보를 입력해주세요.</p>
-            <div class="mt16 select-input">
-                <select name="" id="">
-                    <option value="">은행 선택</option>
-                </select>
-                <input type="text" placeholder="예금주명">
-                <input type="number" placeholder="계좌번호">
-            </div>
-            
-            <div class="hr mt48 mb56"></div>
-            <div class="input-wrap__subtitle"><div class="label-title">환불 여부</div></div>
-            <p class="note-phrase pt12">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
-            <ul class="payment-radio pt32">
-                <li>
-                    <input type="radio" id="payment1" name="payment" checked="">
-                    <label for="payment1">
-                        <span>자동환불</span>
-                    </label>
-                </li>
-                <li>
-                    <input type="radio" id="payment2" name="payment">
-                    <label for="payment2">
-                        <span>내 주소로 기프트박스 받기</span>
-                    </label>
-                </li>
-                <li>
-                    <input type="radio" id="payment3" name="payment">
-                    <label for="payment3">
-                        <span>전액 기부</span>
-                    </label>
-                </li>
-            </ul>
-            <div class="hr mt48 mb56"></div>            
+                </ul>
+                <p class="note-phrase mt32">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
+                <div class="hr mt48 mb56"></div>
+            </div>      
+                <div class="input-wrap__subtitle pb32"><div class="label-title">결제 수단</div></div>
+                <ul class="payment-radio">
+                    <li>
+                        <input type="radio" id="payment1" name="payment" checked="">
+                        <label for="payment1">
+                            <span>신용카드</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input type="radio" id="payment2" name="payment">
+                        <label for="payment2">
+                            <span>계좌이체</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input type="radio" id="payment3" name="payment">
+                        <label for="payment3">
+                            <span>무통장 입금</span>
+                        </label>
+                    </li>
+                </ul>
+                <label class="label pb8 pt32"><span class="essential">*</span>환불 계좌</label>
+                <p class="pt8 text2">계좌이체, 무통장 입금 결제 후 환불 시 결제 금액을 입금 받으실 계좌번호 정보를 입력해주세요.</p>
+                <div class="mt16 select-input">
+                    <select name="" id="">
+                        <option value="">은행 선택</option>
+                    </select>
+                    <input type="text" placeholder="예금주명">
+                    <input type="number" placeholder="계좌번호">
+                </div>
+                
+                <div class="hr mt48 mb56"></div>
+                <div class="input-wrap__subtitle"><div class="label-title">환불 여부</div></div>
+                <p class="note-phrase pt12">11세 이하 어린이는 참가비가 무료입니다. 동반할 아동 인원을 신청해 주시면 행사 당일 현장에서 참여 확인 후 아동의 티셔츠가 선물로 지급됩니다.</p>
+                <ul class="payment-radio pt32">
+                    <li>
+                        <input type="radio" id="payment1" name="payment" checked="">
+                        <label for="payment1">
+                            <span>자동환불</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input type="radio" id="payment2" name="payment">
+                        <label for="payment2">
+                            <span>내 주소로 기프트박스 받기</span>
+                        </label>
+                    </li>
+                    <li>
+                        <input type="radio" id="payment3" name="payment">
+                        <label for="payment3">
+                            <span>전액 기부</span>
+                        </label>
+                    </li>
+                </ul>
+                <div class="hr mt48 mb56"></div>
 
 
             <div class="total-amount align both vm">
